<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inventario"
    android:orientation="vertical"
    >



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:shrinkColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/cafe" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/intentario"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_weight="0.02"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/txtTitProduc"
                android:text="@string/producto"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                android:layout_margin="2dp"
                />

            <TextView
                android:id="@+id/txtTitEntradas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrada"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtTitSalidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salidas"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtTitStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textAppearance="?android:textAppearanceLarge"/>

        </TableRow>

        <TableRow
            android:layout_weight="1"

            android:gravity="end|bottom">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporte"
                android:layout_span="1"/>
        </TableRow>


    </TableLayout>



</LinearLayout>