<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionProveedores">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/cafe" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/intentario"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>
        <TableRow
            android:gravity="end">
            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                android:layout_span="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="348dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitNit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/nit"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/txtTitProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/txtTitModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                android:textAppearance="?android:textAppearanceLarge" /><TextView
                android:id="@+id/txtTitEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>
    </TableLayout>
    </ScrollView>

</RelativeLayout>
