<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroProveedores"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="121dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/cafe" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="4"
                android:gravity="center"
                android:text="@string/intentario"
                android:textAppearance="?android:textAppearanceLarge" />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTRO DE PROVEEDORES"
        android:textSize="25sp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/txtNit_NuevoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/nit"/>

    <EditText
        android:id="@+id/txtNombre_NuevoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Nombre"/>
    <EditText
        android:id="@+id/txtDireccion_NuevoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="dirección"/>
    <EditText
        android:id="@+id/txtTelefono_NuevoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Teléfono"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCrearProveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/crearProveedor" />


        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/anterior" />
    </LinearLayout>
</LinearLayout>